Fix PR format and OpenRewrite issues
- Update pr.md to reference correct issue #12947
- Apply OpenRewrite improvements to SearchHistoryBoundaryCasesTest
- Use getLast() instead of get(size-1) for better readability